syntax = "proto3";

package product;

option go_package = "go-ecommerce/proto/product";

service ProductService {
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc DecreaseStock(DecreaseStockRequest) returns (DecreaseStockResponse);
  rpc RollbackStock(RollbackStockRequest) returns (RollbackStockResponse);
}

message ListProductsRequest {
  int32 page = 1;
  int32 page_size = 2;
  int64 category_id = 3;
  string query = 4; // 搜索关键词
}

message ListProductsResponse {
  repeated Product products = 1;
  int64 total = 2;
}

// 定义 Product 消息 (完全保留你的定义)
message Product {
  int64 id = 1;
  string name = 2;
  string description = 3;
  string picture = 4;
  float price = 5;
  int64 category_id = 6;
  string sku_name = 7; 
  int64 sku_id = 8;
}

message GetProductRequest {
  int64 id = 1;
}

message GetProductResponse {
  int64 id = 1;
  string name = 2;
  string description = 3;
  string picture = 4;
  float price = 5;
  int64 category_id = 6;
  string sku_name = 7;
  int64 sku_id = 8;
}

message DecreaseStockRequest {
  int64 sku_id = 1;
  int32 count = 2;
}

message DecreaseStockResponse {
  bool success = 1;
}

message RollbackStockRequest {
  int64 sku_id = 1;
  int32 count = 2;
}

message RollbackStockResponse {
  bool success = 1;
}